# S-GenIC

./: .gitignore  .gitmodules  .travis.yml  Doxyfile  LICENSE  Makefile  README  allvars.c  allvars.h  bootstrap.sh  cosmology.cpp  cosmology.hpp  createnu.cpp  createnu.hpp  createnufuncs.cpp  createtest.cpp  cubspl.f  displacement.cpp  displacement.hpp  generate-nu.pl  gsl_spline_wrapper.cpp  gsl_spline_wrapper.hpp  ics_nu_default.param  initialise.cpp  main.c  main.cpp  meson.build  ngenic.param  part_data.cpp  part_data.hpp  physconst.h  power.c  power.cpp  power.hpp  print_spec.cpp  proto.h  read_glass.c  read_glass.cpp  read_param.c  read_param.cpp  (+7 more)
nrsrc/: qromb.c
subprojects/: GadgetReader.wrap
testdata/: powerspec_nu_005.txt
testdata/integration/test_dm/: _genic_params.ini
